k8sfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: art
  name: art-deployment
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: art
  type: ClusterIP
