k8sfiles/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: art-ingress
  namespace: default
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - art.parity.evise-nonprod.com
    secretName: jenkins-cert # < cert-manager will store the created certificate in this secret.
  rules:
    - host: art.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: art-deployment
              servicePort: 80
            path: /
